--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# cypress
+cypress/videos
+cypress/screenshots
+cypress/downloads
+
+# others
+package-lock.json
