--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy-test": "npx cypress run",
     "cy-open": "npx cypress open",
-    "cy-stage-test": "npx cypress run --spec cypress/e2e/dev/testEnv.cy.js --config-file stage.config.js"
+    "cy-stage-test": "npx cypress run --spec cypress/e2e/testEnv.cy.js --config-file stage.config.js"
   },
   "author": "",
   "license": "ISC",
